WebContents/style.css
@import url(http://fonts.googleapis.com/css?family=Oswald);
@import url(http://fonts.googleapis.com/css?family=Alegreya);

body {
	font-family: 'Alegreya', serif;
	margin: 0;
}

h1 {
	font-family: 'Oswald', sans-serif;
}

h2 {
	font-family: 'Oswald', sans-serif;
}

#nav-bar {
	font-family: 'Oswald', sans-serif;
	background-color:#000000;
	width: 100%;
	position: fixed;
	top: 0px;
}

#logo-container {
	display: block;
	margin-left:25%;
	float: left;
	width: 50%;
	padding-top: 3px;
	padding-bottom: 4px;
}

#logo {
	display: block;
	margin-left:auto;
	margin-right:auto;
}

#menu-button {
	display: block;
	color: #FFFFFF;
	float: left;
	margin-top: 15px;
	margin-bottom:10px;
	width: 25%;
}

#menu {
	display: none;
	clear: both;
}

ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	width: 100%;
}

li {
	color:#FFFFFF;
	margin-left: auto;
	margin-right: auto;
}
	
li a {
	text-align:center;
	color:#FFFFFF;
	display:block;
}

input {
	max-width:100%;
}
	
	
#content {
	margin-top: 50px;
	margin-left: 5%;
	margin-right: 5%;
}


@media (min-width: 600px) {
	#logo-container {
		display: block;
		margin-left: 5%;
		padding: 3px;
		float: left;
		width: 20%
	}
	
	#logo {
		text-align:left;
		margin-left:0px;
		margin-right:0px;
	}
	
	#menu-button {
		display: none;
	}

	#menu {
		display: block;
		margin-right: 4%;
		margin-top: 15px;
		width: 70%;
		float: left;
		clear: none;
	}

	ul {
		list-style-type: none;
		margin: 0;
		padding: 0;
		width: 100%;
	}

	li {
		color:#FFFFFF;
		float:right;
		width:15%;
	}
	
	li a {
		text-align:right;
		color:#FFFFFF;
		display:block;
	}
}

